@@ -74,7 +74,7 @@ public final class Home extends WebPage
 			@Override
 			public void onClick()
 			{
-				getSession().setLocale(new Locale("nl", "NL"));
+				getSession().setLocale(Locale.of("nl", "NL"));
 			}
 		});
 		add(new Link<Void>("goGerman")
@@ -84,7 +84,7 @@ public final class Home extends WebPage
 			@Override
 			public void onClick()
 			{
-				getSession().setLocale(new Locale("de", "DE"));
+				getSession().setLocale(Locale.of("de", "DE"));
 			}
 		});
 		add(new Link<Void>("goChinese")
@@ -94,7 +94,7 @@ public final class Home extends WebPage
 			@Override
 			public void onClick()
 			{
-				getSession().setLocale(new Locale("zh", "CN"));
+				getSession().setLocale(Locale.of("zh", "CN"));
 			}
 		});
 		add(new Link<Void>("goDanish")
@@ -104,7 +104,7 @@ public final class Home extends WebPage
 			@Override
 			public void onClick()
 			{
-				getSession().setLocale(new Locale("da", "DK"));
+				getSession().setLocale(Locale.of("da", "DK"));
 			}
 		});
 	}
